# liboqs-with-KpqC

./: CMakeLists.txt  README.md
.CMake/: alg_support.cmake
src/: CMakeLists.txt  oqsconfig.h.cmake
src/kem/: kem.c  kem.h
src/kem/ntruplus/: CMakeLists.txt  kem_ntruplus.h  kem_ntruplus_1152.c  kem_ntruplus_576.c  kem_ntruplus_768.c  kem_ntruplus_864.c
src/kem/smaugt/: CMakeLists.txt  kem_smaugt.h  kem_smaugt_1.c  kem_smaugt_3.c  kem_smaugt_5.c
src/sig/: sig.c  sig.h
src/sig/aimer/: CMakeLists.txt  sig_aimer.h  sig_aimer_128f.c  sig_aimer_128f_ref.c  sig_aimer_128s.c  sig_aimer_192f.c  sig_aimer_192f_ref.c  sig_aimer_192s.c  sig_aimer_256f.c  sig_aimer_256s.c
src/sig/aimer/aimer_128f/tests/: test_aim2
src/sig/aimer/aimer_128f_ref/: sign.c
src/sig/aimer/aimer_128f_ref/tests/: test_sign  test_speed
src/sig/aimer/aimer_192f_ref/: sign.c
src/sig/haetae/: CMakeLists.txt  sig_haetae.h  sig_haetae_120.c  sig_haetae_180.c  sig_haetae_260.c
